--- a/lifestage_carryover/scripts/01.01-qPCR.Rmd
+++ b/lifestage_carryover/scripts/01.01-qPCR.Rmd
@@ -402,5 +402,61 @@ ggsave(plot=spat_grid, "lifestage_carryover/output/qPCR/spat_qPCR.jpeg", width=1
 
 Generate spat plot
 
+## ADULT AND JUVENILE
+### Read in files
+```{r read-in-adult-juv-files}
+# Set the directory where your CSV files are located
+cqs_directory <- "lifestage_carryover/data/qPCR/Cq"
+
+# Get a list of all CSV files in the directory with the naming structure "*Cq-Results.csv"
+adult.juv.cq_file_list <- list() # Initialize list
+adult.juv.cq_file_list <- list.files(path = cqs_directory, pattern = "Cq-Results\\.csv$", full.names = TRUE)
+
+# Initialize an empty list to store the data frames
+adult.juv.data_frames <- list()
+
+# Loop through each file and read it into a data frame, then add it to the list
+for (file in adult.juv.cq_file_list) {
+  data <- read.csv(file, header = TRUE)
+  data$Sample <- as.character(data$Sample)  # Convert Sample column to character type
+  adult.juv.data_frames[[file]] <- data
+}
+
+# Combine all data frames into a single data frame
+adult.juv.combined_df <- bind_rows(adult.juv.data_frames, .id = "data_frame_id")
+
+str(adult.juv.combined_df)
+
+```
+
+### Replace target names
+```{r replace-target-names}
+# Replace values in the Target column
+adult.juv.combined_df$Target <- gsub("Cg_GAPDH_205_F-355_R \\(SR IDs: 1172/3\\)", "GAPDH", adult.juv.combined_df$Target)
+
+adult.juv.combined_df$Target <- gsub("Cg_ATPsynthase_F/R \\(SR IDs: 1385/6\\)", "ATPsynthase", adult.juv.combined_df$Target)
+
+adult.juv.combined_df$Target <- gsub("Cg_cGAS \\(SR IDs: 1826/7\\)", "cGAS", adult.juv.combined_df$Target)
+
+adult.juv.combined_df$Target <- gsub("Cg_citrate_synthase (SR IDs: 1383/4)", "citrate.sythase", adult.juv.combined_df$Target)
+
+adult.juv.combined_df$Target <- gsub("Cg_DNMT1_F (SR IDs: 1510/1)", "DNMT1", adult.juv.combined_df$Target)
+
+adult.juv.combined_df$Target <- gsub("Cg_HSP70_F/R (SR IDs: 598/9)", "HSP70", adult.juv.combined_df$Target)
+
+adult.juv.combined_df$Target <- gsub("Cg_Hsp90_F/R (SR IDs: 1532/3)", "HSP90", adult.juv.combined_df$Target)
+
+adult.juv.combined_df$Target <- gsub("Cg_VIPERIN_F/R (SR IDs: 1828/9)", "VIPERIN", adult.juv.combined_df$Target)
+```
+
+### Unique samples by target
+```{r unqique-samples-by-target}
+# Group by Sample and Target, then summarize to get unique rows for each sample
+aggregated_df <- combined_df %>%
+  group_by(Sample, Target) %>%
+  summarize(Cq.Mean = mean(Cq.Mean, na.rm = TRUE)) %>%
+  ungroup()
+
+str(aggregated_df)
 ```
 
