--- a/lifestage_carryover/scripts/01.01-qPCR.Rmd
+++ b/lifestage_carryover/scripts/01.01-qPCR.Rmd
@@ -456,7 +456,7 @@ str(adult.juv.combined_df)
 ```
 
 ### Identify Samples with Cq.Std..Dev > 0.5
-```{r filter-cq-std-dev}
+```{r adult-juv-filter-cq-std-dev}
 # Filter out rows where Cq.Std..Dev is NA
 adult.juv.combined_df <- adult.juv.combined_df[!is.na(adult.juv.combined_df$Cq.Std..Dev), ]
 
@@ -467,10 +467,21 @@ adult.juv.high_cq_std_dev <- adult.juv.combined_df[adult.juv.combined_df$Cq.Std.
 print(adult.juv.high_cq_std_dev[, c("Target", "Sample", "Cq", "Cq.Std..Dev")], row.names = FALSE)
 ```
 
+### Remove bad technical reps
+```{r adult-juv-remove-bad-technical-reps}
+# Group by Sample and Target, then filter out the outlier replicate
+adult.juv.combined.filtered_df <- adult.juv.combined_df %>%
+  group_by(Sample, Target) %>%
+  filter(abs(Cq - mean(Cq)) <= Cq.Std..Dev)
+
+# Print the filtered data frame
+str(adult.juv.combined.filtered_df)
+```
+
 ### Unique samples by target
-```{r unqique-samples-by-target}
+```{r adult-juv-unqique-samples-by-target}
 # Group by Sample and Target, then summarize to get unique rows for each sample
-adult.juv.aggregated_df <- adult.juv.combined_df %>%
+adult.juv.aggregated_df <- adult.juv.combined.filtered_df %>%
   group_by(Sample, Target) %>%
   summarize(Cq.Mean = mean(Cq.Mean, na.rm = TRUE)) %>%
   ungroup()
@@ -478,14 +489,5 @@ adult.juv.aggregated_df <- adult.juv.combined_df %>%
 str(adult.juv.aggregated_df)
 ```
 
-```{r}
 
-# Group by Sample and Target, then filter out the outlier replicate
-filtered_df <- adult.juv.combined_df %>%
-  group_by(Sample, Target) %>%
-  filter(abs(Cq - mean(Cq)) <= Cq.Std..Dev)
-
-# Print the filtered data frame
-print(filtered_df)
-```
 
